rocketmq-sre/deploy/kind/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rocketmq-system
  labels:
    rocketmq.apache.org/client-access: "true"
    app.kubernetes.io/part-of: rocketmq-rust
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: rocketmq-sre
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    rocketmq.apache.org/observability: "true"
